--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Form</title>
 </head>
 <body>
     <h2>Register for Course</h2>
     <form>
         <label for="firstname">Firstname:</label>
-        <input type="text" id="firstname">
+        <input type="text" id="firstname"> <br>
+        <label for="surname">Surname:</label>
+        <input type="text" id="surname">
     </form>
 </body>
 </html>
