--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
         <label for="firstname">Firstname:</label>
         <input type="text" id="firstname"> <br>
         <label for="surname">Surname:</label>
-        <input type="text" id="surname">
+        <input type="text" id="surname"><br>
+        <label for="middlename">Middlename:</label>
+        <input type="text" id="middlename"><br>
+        <label for="age">Age:</label>
+        <input type="number" id="age"><br>
+        <label for="gender">Gender:</label>
+        <input type="checkbox" id="gender">
+        <label for="gender">Male</label>
+        <input type="checkbox" id="gender">
+        <label for="gender">Female</label>
     </form>
 </body>
 </html>
