--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <input type="checkbox" id="gender">
         <label for="gender">Male</label>
         <input type="checkbox" id="gender">
-        <label for="gender">Female</label>
+        <label for="gender">Female</label><br>
+        <label for="placeofbirth">Place of Birth</label>
+        <input type="text" id="placeofbirth">
     </form>
 </body>
 </html>
