--- a/index.html
+++ b/index.html
@@ -20,11 +20,24 @@
         <input type="number" id="age"><br>
         <label for="gender">Gender:</label>
         <input type="checkbox" id="gender">
-        <label for="gender">Male</label>
+        <label for="gender" class="gender">Male</label>
         <input type="checkbox" id="gender">
-        <label for="gender">Female</label><br>
-        <label for="placeofbirth">Place of Birth</label>
-        <input type="text" id="placeofbirth">
+        <label for="gender" class="gender">Female</label><br>
+        <label for="placeofbirth">Place of Birth:</label>
+        <input type="text" id="placeofbirth"><br>
+        <label for="address">Current Address:</label>
+        <input type="text" id="address"><br>
+        <label for="phonenumber">Phone Number:</label>
+        <input type="tel" id="phonenumber"><br>
+        <label for="levelofknowledge">How well you know IT:</label>
+        <input type="range" id="levelofknowledge"><br>
+        <label for="color">Favorite Color:</label>
+        <input type="color" id="color"><br>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday"><br>
+        <label for="photo">Upload a photo:</label>
+        <input type="file" id="photo"><br>
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
